--- a/renderer/html/index.html
+++ b/renderer/html/index.html
@@ -33,7 +33,7 @@
                         <label>password</label>
                     </div>
                     <div class="checkbox">
-                        <input type="checkbox">
+                        <input type="checkbox" id="remember">
                         <h3>duy chì đăng nhập</h3>
                     </div>
                     <div class="mess" id="err"></div>
