--- a/renderer/html/test.html
+++ b/renderer/html/test.html
@@ -21,7 +21,7 @@
             <span id="tenbai">LT Nguyên Hàm 2</span>
         </div>
 
-        <div class="timer inline tap">
+        <div class="timer inline tap ac">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <line x1="10" x2="14" y1="2" y2="2"></line>
@@ -38,7 +38,7 @@
     <div class="main">
         <div class="starbar">
             <div class="lt li">
-                <dir class="svg active">
+                <dir class="svg">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
@@ -63,7 +63,7 @@
             </div>
 
             <div class="bt li">
-                <dir class="svg">
+                <dir class="svg active">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M20 19.5v.5a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8.5L18 5.5"></path>
@@ -87,14 +87,122 @@
 
         </div>
         <div class="body">
-            <div class="conten" id="noidungbaihoc">
-                <div class="noidungbaihoc">
+            <div class="main_cauhoi" id="noidungbaihoc">
+                <div class="main_cauhoi">
 
+                    <div class="cauhoi">
+                        <span class="stt">Câu 1:</span>
+                        <span class="noidung">
+                            <span
+                                style="font-family:'Times New Roman'; font-size:12pt; font-weight:bold; color:#0033cc">
+                            </span><span style="font-family:'Times New Roman'">Họ nguyên hàm của hàm số </span><img
+                                src="https://file.vietschool.vn/d/1931123/2ddf2453-b0ab-482a-abc5-17b2d8672cfd/VT_001"
+                                style="min-width:174px; max-width:174px;min-height:24px; max-height:24px;"><span
+                                style="font-family:'Times New Roman'"> là</span>
+                        </span>
+                    </div>
+                    <div class="ctl">
+                        <div class="a da">
+
+                            <div class="svg">
+                                A
+                            </div>
+
+                            <div class="noidung">
+                                <img src="https://file.vietschool.vn/d/1931123/2ddf2453-b0ab-482a-abc5-17b2d8672cfd/VT_002"
+                                    style="min-width:157px; max-width:157px;min-height:20px; max-height:20px;">
+                            </div>
+                        </div>
+                        <div class="b da">
+                            <div class="svg">
+                                B
+                            </div>
+
+                            <div class="noidung">
+                                <img src="https://file.vietschool.vn/d/1931123/2ddf2453-b0ab-482a-abc5-17b2d8672cfd/VT_003"
+                                    style="min-width:151px; max-width:151px;min-height:20px; max-height:20px;">
+                            </div>
+                        </div>
+                        <div class="c da">
+                            <div class="svg">
+                                C
+                            </div>
+
+                            <div class="noidung">
+                                <img src="https://file.vietschool.vn/d/1931123/2ddf2453-b0ab-482a-abc5-17b2d8672cfd/VT_004"
+                                    style="min-width:147px; max-width:147px;min-height:37px; max-height:37px;">
+                            </div>
+                        </div>
+                        <div class="d da select">
+                            <div class="svg">
+                                D
+                            </div>
+
+                            <div class="noidung">
+                                <img src="https://file.vietschool.vn/d/1931123/2ddf2453-b0ab-482a-abc5-17b2d8672cfd/VT_005"
+                                    style="min-width:154px; max-width:154px;min-height:37px; max-height:37px;">
+                            </div>
+                        </div>
+                        <!-- </div> -->
+                    </div>
+                    <div class="directional">
+                        <div class="bwn">
+                            <button class="back it" onclick="back()">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <polyline points="11 17 6 12 11 7"></polyline>
+                                    <polyline points="18 17 13 12 18 7"></polyline>
+                                </svg>
+                            </button>
+                            <div class="watc it">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <circle cx="12" cy="12" r="10"></circle>
+                                    <line x1="12" y1="8" x2="12" y2="12"></line>
+                                    <line x1="12" y1="16" x2="12.01" y2="16"></line>
+                                </svg>
+                            </div>
+                            <button class="next it" onclick="next()">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <polyline points="13 17 18 12 13 7"></polyline>
+                                    <polyline points="6 17 11 12 6 7"></polyline>
+                                </svg>
+                            </button>
+                        </div>
+
+                        <div class="menu">
+                            <button class="svg" onclick="menuOnOff()">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <circle cx="12" cy="12" r="1"></circle>
+                                    <circle cx="12" cy="5" r="1"></circle>
+                                    <circle cx="12" cy="19" r="1"></circle>
+                                </svg>
+                            </button>
+                        </div>
+
+                    </div>
                 </div>
-                <div class="chat">
+
+                <div class="chat active">
                     <div class="conten">
                         <div class="tag_header">
                             <div class="li active">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z">
+                                    </path>
+                                    <path d="m9 12 2 2 4-4"></path>
+                                </svg>
+                                <span>câu hỏi</span>
+                            </div>
+                            <div class="li">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round">
@@ -115,21 +223,71 @@
                             </div>
                         </div>
                         <div class="tag_conten">
-                            <div class="chat_content active">
-                                <div class="mess">
-                                    <div class="list_mess"></div>
+                            <div class="listcau active">
+                                <div class="list">
+                                    <div class="list-content">
+                                        <button class="li now">
+                                            <p>1</p>
+                                            <div></div>
+                                            <p>D</p>
+                                        </button><button class="li">
+                                            <p>2</p>
+                                            <div></div>
+                                            <p>D</p>
+                                        </button><button class="li">
+                                            <p>3</p>
+                                            <div></div>
+                                            <p>D</p>
+                                        </button><button class="li">
+                                            <p>4</p>
+                                            <div></div>
+                                            <p>D</p>
+                                        </button><button class="li">
+                                            <p>5</p>
+                                            <div></div>
+                                            <p>B</p>
+                                        </button><button class="li">
+                                            <p>6</p>
+                                            <div></div>
+                                            <p>A</p>
+                                        </button><button class="li">
+                                            <p>7</p>
+                                            <div></div>
+                                            <p>D</p>
+                                        </button><button class="li">
+                                            <p>8</p>
+                                            <div></div>
+                                            <p>C</p>
+                                        </button><button class="li">
+                                            <p>9</p>
+                                            <div></div>
+                                            <p>B</p>
+                                        </button><button class="li">
+                                            <p>10</p>
+                                            <div></div>
+                                            <p>C</p>
+                                        </button>
+                                    </div>
                                 </div>
-                                <div class="input">
-                                    <input type="text" class="mess_input" id="text_mess">
-                                    <button onclick="Send()">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
-                                            stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                            stroke-linejoin="round">
-                                            <line x1="22" y1="2" x2="11" y2="13"></line>
-                                            <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
-                                        </svg>
+                                <div class="button">
+                                    <button class="button_nop">Nộp bài</button>
+
+                                    <button class="button_menu">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>
+                                        <div class="element">
+                                            <div class="pad">    
+                                                <li>Làm lại</li>
+                                                <li>Làm lại bài mới</li>
+                                                <li>coppy</li>
+                                                <li>pass</li>
+                                            </div>
+                                        </div>
                                     </button>
                                 </div>
+                            </div>
+
+                            <div class="chat">
+
                             </div>
 
                             <div class="online">
@@ -137,10 +295,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <button class="button_chat">
-
-                    </button>
                 </div>
             </div>
 
