cập nhật giao diện

--- a/renderer/html/phonghoc.html
+++ b/renderer/html/phonghoc.html
@@ -9,6 +9,7 @@
     <script src="../js/prosoft/prosoft.data-4.0.2.min.js"></script>
     <script src="../js/WebSocketSupport.js"></script>
     <script src="../js/phonghoc.js"></script>
+    <script src="../js/phonghocEvent.js"></script>
     <title>Document</title>
     <link rel="stylesheet" href="../css/phonghoc.css">
 </head>
