--- a/renderer/html/test.html
+++ b/renderer/html/test.html
@@ -7,21 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/phonghoc.css">
+    <script src="../js/phonghocEvent.js"></script>
 </head>
 
 <body>
     <div class="header">
         <div class="mon inline">
             <h4>Môn:</h4>
-            <span id="mon">Toán</span>
+            <span id="mon">Vật lí</span>
         </div>
 
         <div class="bai inline">
             <h4>Bài:</h4>
-            <span id="tenbai">LT Nguyên Hàm 2</span>
+            <span id="tenbai">Ôn Tập Chương 5</span>
         </div>
 
-        <div class="timer inline tap ac">
+        <div class="timer inline tap">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <line x1="10" x2="14" y1="2" y2="2"></line>
@@ -38,7 +39,7 @@
     <div class="main">
         <div class="starbar">
             <div class="lt li">
-                <dir class="svg">
+                <dir class="svg active">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
@@ -63,7 +64,7 @@
             </div>
 
             <div class="bt li">
-                <dir class="svg active">
+                <dir class="svg">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M20 19.5v.5a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8.5L18 5.5"></path>
@@ -87,19 +88,83 @@
 
         </div>
         <div class="body">
+            <div class="conten" id="noidungbaihoc">
+                <div class="noidungbaihoc">
+                    <p>Các em xem sơ đồ tư duy để dễ nhớ kiến thức chương 5 và luyện tập các câu hỏi trắc nghiệm lý
+                        thuyết nhé.</p>
+                    <p>
+                        <div class="file">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"></path><polyline points="14 2 14 8 20 8"></polyline></svg>
+                            <div>
+                                <p class="name">
+                                    nội dung bài học.txt
+                                </p>
+                                <p class="size">
+                                    100kb
+                                </p>
+                            </div>
+                        </div>
+                    </p>
+                </div>
+                <div class="chat">
+                    <div class="conten">
+                        <div class="tag_header">
+                            <div class="li active">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                                </svg>
+                                <span>chat</span>
+                            </div>
+                            <div class="li">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"></path>
+                                    <circle cx="9" cy="7" r="4"></circle>
+                                    <path d="M22 21v-2a4 4 0 0 0-3-3.87"></path>
+                                    <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                </svg>
+                                <span>Online</span>
+                            </div>
+                        </div>
+                        <div class="tag_conten">
+                            <div class="chat_content active">
+                                <div class="mess">
+                                    <div class="list_mess"></div>
+                                </div>
+                                <div class="input">
+                                    <input type="text" class="mess_input" id="text_mess">
+                                    <button onclick="Send()">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                            stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                            stroke-linejoin="round">
+                                            <line x1="22" y1="2" x2="11" y2="13"></line>
+                                            <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+
+                            <div class="online">
+
+                            </div>
+                        </div>
+
+                    </div>
+                    <button class="button_chat" onclick="chatOnOff()">
+
+                    </button>
+                </div>
+            </div>
+
 
         </div>
 
     </div>
-    <div class="err">
-        <div class="e con">
-            <div class="ico">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="7.86 2 16.14 2 22 7.86 22 16.14 16.14 22 7.86 22 2 16.14 2 7.86 7.86 2"></polygon><line x1="15" y1="9" x2="9" y2="15"></line><line x1="9" y1="9" x2="15" y2="15"></line></svg>
-            </div>
-            <div class="mes">
-            </div>
-        </div>
-    </div>
+
+
 
 </body>
 
