--- a/renderer/html/test.html
+++ b/renderer/html/test.html
@@ -93,7 +93,7 @@
                     <p>Các em xem sơ đồ tư duy để dễ nhớ kiến thức chương 5 và luyện tập các câu hỏi trắc nghiệm lý
                         thuyết nhé.</p>
                     <p>
-                        <div class="file">
+                        <button class="file">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"></path><polyline points="14 2 14 8 20 8"></polyline></svg>
                             <div>
                                 <p class="name">
@@ -103,7 +103,7 @@
                                     100kb
                                 </p>
                             </div>
-                        </div>
+                        </button>
                     </p>
                 </div>
                 <div class="chat">
