cập nhật hằng ngày

--- a/renderer/html/home.html
+++ b/renderer/html/home.html
@@ -21,20 +21,48 @@
         <div class="sp"></div>
         <div class="main-header">
             <div class="l">
-                <button class="on">All</button>
-                <button>Toán</button>
-                <button>Lý</button>
-                <button>Hóa</button>
-                <button>Anh</button>
-                <button class="add">
-                    <ion-icon name="add-outline"></ion-icon>
-                </button>
             </div>
             <div class="r">
-                <button class="mor">
-                    <div></div>
-                    <ion-icon name="arrow-down-outline"></ion-icon>
-                </button>
+                <li class="bu mor">
+                    <div class="status"></div>
+                    <div class="menu">
+                        <ul class="ul on">
+                            <li>
+                                <div class="text-dis">
+                                    <span>Phòng </span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+                                </div>
+                                <ul class="">
+                                    <li>trược tiếp</li>
+                                    <li>chưa diễn ra</li>
+                                    <li>kết thúc</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <div class="text-dis">
+                                    <span>Điểm</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 3v18h18"></path><path d="m19 9-5 5-4-4-3 3"></path></svg>
+                                </div>
+                                <ul class="">
+                                    <li>Lớp học</li>
+                                    <li>trường</li>
+                                </ul>
+                            </li>
+
+                            <li>
+                                <div class="text-dis">
+                                    <span>Tài Khoản</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+                                </div>
+                                <ul class="">
+                                    <li>Đổi mk</li>
+                                    <li>Đăng xuất</li>
+                                </ul>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
             </div>
         </div>
         <div id="body">
