--- a/renderer/html/test.html
+++ b/renderer/html/test.html
@@ -6,117 +6,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/phonghoc.css">
-    <script src="../js/phonghocEvent.js"></script>
+    <link rel="stylesheet" href="../css/home.css">
+    <script>
+
+        window.onload = (event) => {
+            document.querySelectorAll(".r div.text-dis").forEach((e) => {
+                e.addEventListener('click', () => {
+                    var pa = e.parentElement;
+                    if (pa.querySelector('ul').classList.contains("on")){
+                        pa.querySelector('ul').classList.remove('on')
+                    }
+                    else {
+                        pa.querySelector('ul').classList.add('on')
+                    }
+
+                })
+            })
+        };
+        </script>
 </head>
 
 <body>
-    <div class="header">
-        <div class="mon inline">
-            <h4>Môn:</h4>
-            <span id="mon">Vật lí</span>
-        </div>
-
-        <div class="bai inline">
-            <h4>Bài:</h4>
-            <span id="tenbai">Ôn Tập Chương 5</span>
-        </div>
-
-        <div class="timer inline tap">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <line x1="10" x2="14" y1="2" y2="2"></line>
-                <line x1="12" x2="15" y1="14" y2="11"></line>
-                <circle cx="12" cy="14" r="8"></circle>
-            </svg>
-            <span>
-                2phut 30s
-            </span>
-        </div>
-
-
-    </div>
     <div class="main">
-        <div class="starbar">
-            <div class="lt li">
-                <dir class="svg">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
-                        <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
-                    </svg>
-                </dir>
-                <p>Lý thuyết</p>
-            </div>
+        <div class="sp"></div>
+        <div class="main-header">
+            <div class="l">
+                <button class="bu"></button>
+                <button class="bu"></button>
+                <button class="bu"></button>
+                <button class="bu"></button>
+                <div class="bu more">
+                    <div class="displa">
 
-            <div class="live li">
-                <dir class="svg">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <circle cx="12" cy="12" r="2"></circle>
-                        <path d="M4.93 19.07a10 10 0 0 1 0-14.14"></path>
-                        <path d="M7.76 16.24a6 6 0 0 1-1.3-1.95 6 6 0 0 1 0-4.59 6 6 0 0 1 1.3-1.95"></path>
-                        <path d="M16.24 7.76a6 6 0 0 1 1.3 2 6 6 0 0 1 0 4.59 6 6 0 0 1-1.3 1.95"></path>
-                        <path d="M19.07 4.93a10 10 0 0 1 0 14.14"></path>
-                    </svg>
-                </dir>
-                <p>Live</p>
-            </div>
-
-            <div class="bt li">
-                <dir class="svg">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M20 19.5v.5a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8.5L18 5.5"></path>
-                        <path d="M8 18h1"></path>
-                        <path d="M18.42 9.61a2.1 2.1 0 1 1 2.97 2.97L16.95 17 13 18l.99-3.95 4.43-4.44Z"></path>
-                    </svg>
-                </dir>
-                <p>Bài tập</p>
-            </div>
-            <div class="li end">
-                <div class="svg" onclick="outRoom()">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <polyline points="9 10 4 15 9 20"></polyline>
-                        <path d="M20 4v7a4 4 0 0 1-4 4H4"></path>
-                    </svg>
-                </div>
-
-            </div>
-            <div class="file li ">
-                <dir class="svg active">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"></path>
-                        <polyline points="14 2 14 8 20 8"></polyline>
-                        <line x1="16" y1="13" x2="8" y2="13"></line>
-                        <line x1="16" y1="17" x2="8" y2="17"></line>
-                        <line x1="10" y1="9" x2="8" y2="9"></line>
-                    </svg>
-                </dir>
-                <p>Tên file</p>
-            </div>
-
-        </div>
-        <div class="body">
-            <div class="conten" id="noidungbaihoc">
-                <div class="view_file">
-                    <iframe
-                    src="https://docs.google.com/gview?url=https://file.vietschool.vn/F/12989747/567b8aff-024c-44c3-b241-cc4775942fa2&embedded=true"
-                    frameborder="0"></iframe>
-
-                    <a class="button_dow" href="">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
-                    </a>
+                    </div>
+                    <div class="contenr">
+                        <button class="bu"></button>
+                        <button class="bu"></button>
+                        <button class="bu"></button>
+                    </div>
                 </div>
             </div>
+            <div class="r">
+                <li class="bu mor">
+                    <div class="status"></div>
+                    <div class="menu">
+                        <ul class="ul on">
+                            <li>
+                                <div class="text-dis">
+                                    <span>Phòng </span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+                                </div>
+                                <ul class="">
+                                    <li>trược tiếp</li>
+                                    <li>chưa diễn ra</li>
+                                    <li>kết thúc</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <div class="text-dis">
+                                    <span>Điểm</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 3v18h18"></path><path d="m19 9-5 5-4-4-3 3"></path></svg>
+                                </div>
+                                <ul class="">
+                                    <li>Lớp học</li>
+                                    <li>trường</li>
+                                </ul>
+                            </li>
 
+                            <li>
+                                <div class="text-dis">
+                                    <span>Tài Khoản</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+                                </div>
+                                <ul class="on">
+                                    <li>Đổi mk</li>
+                                    <li>Đăng xuất</li>
+                                </ul>
+                            </li>
 
+                        </ul>
+                    </div>
+                </li>
+            </div>
+        </div>
+        <div id="body">
+            <div class="allsub">
+            </div>
         </div>
 
+        <div class="s">
+            <div style="border-radius: 50%; background: red;height: 50%; width: 50%;  border-radius: 50%;"></div>
+        </div>
     </div>
-
+    <div class="loader_div" id="loader" style="visibility: hidden;">
+        <div class="loader"></div>
+    </div>
 
 
 </body>
