--- a/renderer/html/index.html
+++ b/renderer/html/index.html
@@ -33,16 +33,13 @@
                         <label>password</label>
                     </div>
                     <div class="checkbox">
-                        <input type="checkbox" id="remember">
-                        <h3>duy chì đăng nhập</h3>
+                        <input type="checkbox" id="remember" >
+                        <label>duy chì đăng nhập</label>
                     </div>
                     <div class="mess" id="err"></div>
                     <button id="button_login" onclick="login()">
                         Login
                     </button>
-
-
-
                 </div>
             </div>
         </div>
