--- a/renderer/html/phonghoc.html
+++ b/renderer/html/phonghoc.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../js/jQuery.js"></script>
+    <script src="../js/moment.js"></script>
     <script src="../js/prosoft/prosoft.data-4.0.2.min.js"></script>
     <script src="../js/WebSocketSupport.js"></script>
     <script src="../js/phonghoc.js"></script>
@@ -25,15 +26,6 @@
             <h4>Bài:</h4>
             <span id="tenbai"></span>
         </div>
-
-        <div class="timer inline tap">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="10" x2="14" y1="2" y2="2"></line><line x1="12" x2="15" y1="14" y2="11"></line><circle cx="12" cy="14" r="8"></circle></svg>
-            <span>
-                2phut 30s
-            </span>
-        </div>
-
-        
     </div>
     <div class="main">
         <div class="starbar">
